Fix typo: Ekam Sat → Ekum Sat

--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
         </p>
 
         <div class="motto">
-            "Ekam Sat, viprāḥ bahudhā vadanti"<br>
+            "Ekum Sat, viprāḥ bahudhā vadanti"<br>
             <small>Truth is one; the wise speak of it in many ways.</small><br>
             <small style="color: var(--text-light);">— Rigveda 1.164.46</small>
         </div>
