--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPS Daily — Science, Philosophy & Society</title>
-    <meta name="description" content="A daily digest of the best writing on science, philosophy, and society. Ekam Sat.">
+    <meta name="description" content="A daily digest of the best writing on science, philosophy, and society. Ekum Sat.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
@@ -481,7 +481,7 @@
         <div class="masthead">
             <h1 class="site-title"><span>SPS</span> DAILY</h1>
             <p class="tagline">Science, Philosophy & Society</p>
-            <p class="motto">Ekam Sat — Truth is One</p>
+            <p class="motto">Ekum Sat — Truth is One</p>
             <p class="date-line" id="date-line"></p>
         </div>
     </header>
@@ -545,7 +545,7 @@
         <p><strong>SPS Daily</strong> — Science, Philosophy & Society</p>
         <p>Curated with care. No algorithms. No clickbait.</p>
         <p><a href="about.html">About</a> · <a href="mailto:hello@thebeakers.com">Contact</a> · <a href="feed.xml">RSS</a></p>
-        <p class="footer-motto">"Ekam Sat" — The truth is one, though the sages speak of it in many ways.</p>
+        <p class="footer-motto">"Ekum Sat" — The truth is one, though the sages speak of it in many ways.</p>
         <p class="legal">
             <a href="privacy.html">Privacy Policy</a> · <a href="terms.html">Terms of Use</a><br>
             &copy; 2026 The Beakers. All rights reserved.
