Add Open Graph meta tags for social previews

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPS Daily — Science, Philosophy & Society</title>
     <meta name="description" content="A daily digest of the best writing on science, philosophy, and society. Ekum Sat.">
+
+    <!-- Open Graph / WhatsApp / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://spsdaily.thebeakers.com/">
+    <meta property="og:title" content="SPS Daily — Science, Philosophy & Society">
+    <meta property="og:description" content="A curated digest of the best writing on science, philosophy, and society. Ekum Sat — Truth is One.">
+    <meta property="og:image" content="https://spsdaily.thebeakers.com/og-image.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SPS Daily — Science, Philosophy & Society">
+    <meta name="twitter:description" content="A curated digest of the best writing on science, philosophy, and society. Ekum Sat — Truth is One.">
+    <meta name="twitter:image" content="https://spsdaily.thebeakers.com/og-image.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
