Add archive system: articles beyond 15 go to dated archive

--- a/index.html
+++ b/index.html
@@ -639,6 +639,7 @@
             <li><a href="#philosophy">Philosophy</a></li>
             <li><a href="#society">Society</a></li>
             <li><a href="#books">Books</a></li>
+            <li><a href="archive.html">Archive</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
