Add Founding Editor to footers

--- a/about.html
+++ b/about.html
@@ -209,6 +209,7 @@
 
     <footer>
         <p><strong>SPS Daily</strong> — Science, Philosophy & Society</p>
+        <p><strong>Founding Editor:</strong> Kiran Boggavarapu</p>
         <p><a href="index.html">Home</a> · <a href="mailto:hello@thebeakers.com">Contact</a> · <a href="feed.xml">RSS</a></p>
         <p style="font-size: 0.75rem; color: #666; margin-top: 1rem;">
             <a href="privacy.html" style="color: #888;">Privacy Policy</a> · <a href="terms.html" style="color: #888;">Terms of Use</a><br>
