--- a/archive.html
+++ b/archive.html
@@ -180,6 +180,7 @@
 
     <footer>
         <p><strong>SPS Daily</strong> — Science, Philosophy & Society</p>
+        <p><strong>Founding Editor:</strong> Kiran Boggavarapu</p>
         <p>&copy; 2026 The Beakers. All rights reserved.</p>
     </footer>
 
