--- a/index.html
+++ b/index.html
@@ -762,6 +762,7 @@
 
     <footer>
         <p><strong>SPS Daily</strong> — Science, Philosophy & Society</p>
+        <p><strong>Founding Editor:</strong> Kiran Boggavarapu</p>
         <p>Curated with care. No algorithms. No clickbait.</p>
         <p><a href="about.html">About</a> · <a href="mailto:hello@thebeakers.com">Contact</a> · <a href="feed.xml">RSS</a></p>
         <p class="footer-motto">"Ekum Sat" — The truth is one, though the sages speak of it in many ways.</p>
