--- a/index.html
+++ b/index.html
@@ -154,10 +154,11 @@
         }
 
         .masthead-icon {
-            width: 60px;
-            height: 60px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             flex-shrink: 0;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.15);
         }
 
         .masthead {
